--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 
 
             <img alt="Image html" width="90%" height="90%" style="max-height:500px;max-width:500px;"
-                 src="yoda-hot-air.jpg"/>
+                 src="images/yoda-hot-air.jpg"/>
 
 
         </div>
