--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -19,6 +19,17 @@ background-color: #31c771;
 margin-top: 10px;
 }
 
+h1{
+    margin-top:40px;
+
+}
+
+.ligne{
+    margin-top: 40px;
+    border-top: solid;
+    border-color: #9b0f39;
+}
+
 .container {
   max-width: 1500px;
 }
