--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,13 +16,7 @@
 
       <body>
 
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-          <symbol id="check" viewBox="0 0 16 16">
-            <title>Check</title>
-            <path
-              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-          </symbol>
-        </svg>
+
 
         <div class="container py-3">
           <header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
@@ -34,7 +28,7 @@
               <a class="me-3 py-2 text-dark text-decoration-none" href="/paymybuddy/transfer">Transfer</a>
               <a class="me-3 py-2 text-dark text-decoration-none" href="/paymybuddy/profile">Profile</a>
               <a class="me-3 py-2 text-dark text-decoration-none" href="/paymybuddy/contact">Contact</a>
-              <a class="py-2 text-dark text-decoration-none" href="/paymybuddy/logout">Log off </a>
+              <a class="py-2 text-dark text-decoration-none" href="/logout">Log off </a>
             </nav>
           </header>
             <!DOCTYPE html>
@@ -46,7 +40,7 @@
                 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
                       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
                 <link href="index.css" rel="stylesheet">
-                <script src='cours.js' async></script>
+
             </head>
 
             <body>
@@ -61,7 +55,7 @@
                     <div class="row justify-content-start" style="padding-top:10px;">
 
                         <div class="col" style="padding-top:10px;">
-                            <img src="en-tete-mini.png" alt="Dictature Française">
+                            <img src="images/en-tete-mini.png" alt="Dictature Française">
                         </div>
 
                         <div class="col" style="padding-top:40px;">
